<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="HardcodedText">

    <item
        android:icon="@drawable/ic_user"
        android:id="@+id/nav_account"
        android:title="@string/my_profile" />

    <item
        android:icon="@drawable/ic_share"
        android:id="@+id/nav_share"
        android:title="@string/share_app" />

    <item
        android:icon="@drawable/ic_help_about"
        android:id="@+id/nav_about_us"
        android:title="@string/about_us" />

  <!--  <item
        android:icon="@drawable/ic_user"
        android:id="@+id/nav_contact_us"
        android:title="@string/contact_us" />
-->
    <item
        android:icon="@drawable/ic_logout"
        android:id="@+id/nav_logout"
        android:title="@string/logout" />

</menu>