<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.userdetails.UserProfile">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/_10dp">

        <TextView
            style="@style/LargeTextview"
            android:layout_marginTop="@dimen/_30dp"
            android:text="@string/your_details"
            android:textColor="@color/colorBlack"
            android:textColorLink="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/LargeTextview"
                android:layout_marginTop="@dimen/_30dp"
                android:text="@string/name"
                android:textColor="@color/colorBlack"
                android:textColorLink="@color/colorPrimary" />

            <TextView
                android:id="@+id/textUserName"
                style="@style/LargeTextview"
                android:layout_marginTop="@dimen/_30dp"
                android:text=""
                android:textColor="@color/colorBlack"
                android:textColorLink="@color/colorPrimary" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/LargeTextview"
                android:layout_marginTop="@dimen/_30dp"
                android:text="@string/phone"
                android:textColor="@color/colorBlack"
                android:textColorLink="@color/colorPrimary" />

            <TextView
                android:id="@+id/textUserPhone"
                style="@style/LargeTextview"
                android:layout_marginTop="@dimen/_30dp"
                android:text=""
                android:textColor="@color/colorBlack"
                android:textColorLink="@color/colorPrimary" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>